--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ redis==4.6.0
 SQLAlchemy==2.0.21
 
 # AI & Language Models
-openai==1.3.0
+openai>=1.6.1
 langchain==0.0.340
 langchain-openai==0.0.2
 langchain-community==0.0.10
