--- a/requirements_simple.txt
+++ b/requirements_simple.txt
@@ -1,33 +1,2 @@
-# Core Framework
 Flask==2.3.3
-Flask-SocketIO==5.3.6
-python-socketio==5.8.0
-python-engineio==4.7.1
-
-# AI & Language Models
-openai==1.3.0
-langchain==0.0.340
-langchain-openai==0.0.2
-
-# Web Scraping & Data Processing
-requests==2.31.0
-beautifulsoup4==4.12.2
-lxml==4.9.3
-pandas==2.1.1
-numpy==1.24.3
-
-# Image Processing
-Pillow==10.0.1
-
-# Utilities
-python-dotenv==1.0.0
-pydantic==2.4.2
-dataclasses-json==0.6.1
-
-# Development & Testing
-pytest==7.4.2
-pytest-asyncio==0.21.1
-
-# Additional Dependencies
-aiohttp==3.8.6
-websockets==11.0.3 
+gunicorn==21.2.0 
