🎮 COMPLETE GAME FIX: All missing nodes added, global functions centralized, deep branching stories implemented

--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,11 @@ services:
     name: ai-dungeon-master
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 2
+    startCommand: gunicorn --worker-class eventlet -w 1 app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: FLASK_ENV
         value: production
+      - key: PORT
+        value: 10000
     healthCheckPath: /
     autoDeploy: true
