--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
 Flask==2.3.3
-gunicorn==21.2.0 
+Flask-SocketIO==5.3.6
+python-socketio==5.8.0
+python-engineio==4.7.1
+gunicorn==21.2.0
+eventlet==0.33.3
+gevent==23.7.0
+python-dotenv==1.0.0
+requests==2.31.0 
