--- a/render.yaml
+++ b/render.yaml
@@ -9,5 +9,8 @@ services:
         value: production
       - key: PORT
         value: 10000
+      - key: PYTHON_VERSION
+        value: 3.12.0
     healthCheckPath: /
     autoDeploy: true
+    plan: free
