--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     rootDir: .
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --worker-class sync -w 1 app:app --bind 0.0.0.0:$PORT
+    startCommand: python app.py
     envVars:
       - key: FLASK_ENV
         value: production
