--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-CORS==4.0.0
 python-socketio==5.8.0
 python-engineio==4.7.1
 gunicorn==21.2.0
+eventlet==0.33.3
 python-dotenv==1.0.0
 requests==2.31.0
 Werkzeug==2.3.7 
