--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
+Flask-SocketIO==5.3.6
 python-dotenv==1.0.0
 requests==2.31.0
-Werkzeug==2.3.7 
+Werkzeug==2.3.7
+gunicorn==21.2.0
+eventlet==0.33.3 
