--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: ai-dungeon-master
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 2
+    startCommand: gunicorn app_production:app --bind 0.0.0.0:$PORT --workers 2
     envVars:
       - key: FLASK_ENV
         value: production
